+ patrôon (opelik is 't elukt...)

--- a/Frank_Vandenbroucke_(coureur).mw
+++ b/Frank_Vandenbroucke_(coureur).mw
@@ -1,6 +1,29 @@
-{{wrapper}}
-|[[Ofbeeldienge:Frankyboy.JPG|thumb|right|VDB op 't Dernycriterium in [[Antwerpn]] (08/08/2007)]]
-|}
+{{Coureur |
+  zendje                      = [[Ofbeeldienge:Frankyboy.JPG|thumb|right|VDB op 't Dernycriterium in [[Antwerpn]] (08/08/2007)]] |
+  noame                       = Frank Vandenbroucke |
+  bynoame                     = VDB, Bimbo d'oro, Franky boy |
+  gebortedoatum               = [[6 november]] [[1974]] |
+  gebortestee                 = [[Moeskroen]] |
+  geborteland                 = [[Belgie]] |
+  lengte                      = 192 |
+  gewicht                     = 82 |
+  ploeg                       = Mitsubishi-Jartazi |
+  joarn                       = 
+[[2008]]<br> |
+  vorigeploegen               = 
+Acqua & Sapone<br>
+Unibet.com<br>
+MrBookmaker.com<br>
+Fassa Bortolo<br>
+Quick·Step - Davitamon<br>
+Domo - Farm Frites<br>
+Lampre - Daikin<br>
+Cofidis<br>
+Mapei - Bricobi<br>
+Mapei - GB<br>
+Lotto - Caloi |
+  specialisoatie              = rouleur en klimmer; nôordelikke klassiekers, klindere roundes |
+}}
 '''Frank Vandenbroucke''' ([[Moeskroen]], [[6 november]] [[1974]]) is e [[België|Belgschen]] [[coureur]]. E wos e grôte belofte die ol in 1999 op zyn oogtepunt wos. Doarachter kwam 'n surtout op e kwoalikke maniere in 't nieuws.
 
 == Jeugd ==
