/* Uutbreidienge van 't Groafschap */

--- a/Boudewyn_IV_van_Vloandern.mw
+++ b/Boudewyn_IV_van_Vloandern.mw
@@ -27,15 +27,15 @@ De drie burggroafschappn woarn:
 *[[Gent]] met ’t Land van Waas 
 
 ==Uutbreidienge van 't Groafschap==
-Nu dat olles intern gestabiliseerd was begost Boudewyn te zoekn vo z’n macht buutn ’t groafschap uut te breidn. Zyn vôorgangers Boudewyn II en Arnulf I aan ’t groafschap zuudwoarts uutgebreid tusschn 879 en 965, mo nu wast er vele veranderd. Deur d’ountwikkelienge van de Normandische macht en deur de Fransche monarchie die ossan mo sterker wierd, kost Boudewyn nie mi verder no ’t zuudn. Doarom gingt ’n nu vo gebiedn, ten ôostn van de Schelde, van ’t Duuts [[Illig Rôoms Ryk]]. ’t Was nie gemakkelik want keizer Otto II aad ’n ende geleen drie sterke burchtn langs de Schelde loatn bouwn: in Antwerpn, Ename en Valenciennes.
+Nu dat olles intern gestabiliseerd was begost Boudewyn te zoekn vo z’n macht buutn ’t groafschap uut te breidn. Zyn vôorgangers Boudewyn II en Arnulf I aan ’t groafschap zuudwoarts uutgebreid tusschn 879 en 965, mo nu wast er vele veranderd. Deur d’ountwikkelienge van de Normandische macht en deur de Fransche monarchie die ossan mo sterker wierd, kost Boudewyn nie mi verder no ’t zuudn. Doarom gingt ’n nu vo gebiedn, ten ôostn van de Schelde, van ’t Duuts [[Illig Rôoms Ryk]]. ’t Was nie gemakkelik want keizer Otto II aad ’n ende geleen, round 980, drie sterke burchtn langs de Schelde loatn bouwn en de markgroafschappn [[Antwerpn]], Ename en Valenciennes ipgericht.
 
 Boudewyn aad em styf agressief ipgesteld teegn keunink (de loatern keizer) Hendrik II den Illign van Duutsland. In 1006 paktegt ie Valenciennes in, mo je kost ’t uuteindelik nie oaln teegn de Duutsers, die gesteund woarn deur Fransche en Normandische troepn.
 
-D’n 22stn oktober 1011 kreegt ’n ton toch ’t Groafschap Valenciennes en de streke van [[Zêeland]], ten westn van de Schelde, in lêen. Azo ountstound Ryksvloandern (de gebiedn in lêen van ’t Ryk) tegenover Krôonvloandern (de gebiedn in lêen van de Fransche krone).
+D’n 22stn oktober 1011 kreegt ’n ton toch ’t Groafschap Valenciennes en de streke van [[Zêeland]] in lêen. Azo ountstound [[Ryksvloandern]] (de gebiedn in lêen van ’t Ryk) tegenover [[Krôonvloandern]] (de gebiedn in lêen van de Fransche krone).
 
 D’n 28sten september 1014 wast er e stormvloed. De maritieme transgressie was ‘t gevolg van geologische bewegiengn an de kust. De vloedgolf zette de kustn van Vloandern en Zêeland ounder woater. By de rampe vieln d’r duuzendn dooie. D’r wierdn nieuwe dykn gebouwd en Boudewyn IV gink persôonlik toezicht doen ip de werkn.
 
-In 1033 stak Boudewyn  de Schelde over en je pakte Ename in. Je veroverde azo ’t markgroafschap Ename.
+In 1033 stak Boudewyn de Schelde over en veroverde ’t markgroafschap Ename.
 
 ==Vrouwn en kinders==
 Eeste vrouwe:
