--- a/Luuk-Bastenoakn-Luuk.mw
+++ b/Luuk-Bastenoakn-Luuk.mw
@@ -6,17 +6,18 @@ Luuk-Bastenoakn-Luuk sprikt dus voerol klemmers en liefebbers van 't middngeberg
 Tot nu toe zyn d'er moa 6 coureurs die diejn dubbel verwezenlikt en in 't zelfste joar: Ferdi Kubler (1951 en 1952), Stan Ockers (1955), Eddy Merckx (1972), Moreno Argentin (1991), Davide Rebellin (2004), en Alejandro Valverde (2006).
 
 == Recente winnoars ==
-* [[2007]] [[Danilo Di Luca]] 	  	 
-* [[2006]] [[Alejandro Valverde]] 	  	 
-* [[2005]] [[Alexander Vinokoerov]] 	  	 
-* [[2004]] [[Davide Rebellin]] 	  	 
-* [[2003]] [[Tyler Hamilton]] 	  	 
-* [[2002]] [[Paolo Bettini]] 	  	 
-* [[2001]] [[Oscar Camenzind]] 	  	 
-* [[2000]] [[Paolo Bettini]] 	  	 
-* [[1999]] [[Frank Vandenbroucke (coureur)|Frank Vandenbroucke]]  	 
-* [[1998]] [[Michele Bartoli]] 	  	 
-* [[1997]] [[Michele Bartoli]] 	
+* [[Luuk-Bastenoakn-Luuk 2008|2008]] [[Alejandro Valverde]] 
+* [[Luuk-Bastenoakn-Luuk 2007|2007]] [[Danilo Di Luca]] 	  	 
+* [[Luuk-Bastenoakn-Luuk 2006|2006]] [[Alejandro Valverde]] 	  	 
+* [[Luuk-Bastenoakn-Luuk 2005|2005]] [[Alexander Vinokoerov]] 	  	 
+* [[2Luuk-Bastenoakn-Luuk 2004|004]] [[Davide Rebellin]] 	  	 
+* 2003 [[Tyler Hamilton]] 	  	 
+* 2002 [[Paolo Bettini]] 	  	 
+* 2001 [[Oscar Camenzind]] 	  	 
+* 2000 [[Paolo Bettini]] 	  	 
+* 1999 [[Frank Vandenbroucke (coureur)|Frank Vandenbroucke]]  	 
+* 1998 [[Michele Bartoli]] 	  	 
+* 1997 [[Michele Bartoli]] 	
 
 [[Eddy Merckx]] is recordouder: en et L-B-L 5 keirs kunn winn.  	 
 
