--- a/Luuk-Bastenoakn-Luuk.mw
+++ b/Luuk-Bastenoakn-Luuk.mw
@@ -10,7 +10,7 @@ Tot nu toe zyn d'er moa 6 coureurs die diejn dubbel verwezenlikt en in 't zelfst
 * [[Luuk-Bastenoakn-Luuk 2007|2007]] [[Danilo Di Luca]] 	  	 
 * [[Luuk-Bastenoakn-Luuk 2006|2006]] [[Alejandro Valverde]] 	  	 
 * [[Luuk-Bastenoakn-Luuk 2005|2005]] [[Alexander Vinokoerov]] 	  	 
-* [[2Luuk-Bastenoakn-Luuk 2004|004]] [[Davide Rebellin]] 	  	 
+* [[Luuk-Bastenoakn-Luuk 2004|2004]] [[Davide Rebellin]] 	  	 
 * 2003 [[Tyler Hamilton]] 	  	 
 * 2002 [[Paolo Bettini]] 	  	 
 * 2001 [[Oscar Camenzind]] 	  	 
