--- a/Frank_Vandenbroucke_(coureur).mw
+++ b/Frank_Vandenbroucke_(coureur).mw
@@ -27,8 +27,8 @@ Lotto - Caloi |
 '''Frank Vandenbroucke''' ([[Moeskroen]], [[6 november]] [[1974]]) is e [[België|Belgschen]] [[coureur]]. E wos e grôte belofte die ol in 1999 op zyn oogtepunt wos. Doarachter kwam 'n surtout op e kwoalikke maniere in 't nieuws.
 
 == Jeugd ==
-Vandenbroucke, ouk wel 'VDB' enoemd, groeide op in [[Ploegsteirt]]. Zyn voader, Jean-Jacques, wos e tydege coureur. Frank Vandenbroucke dei e masse sportn geirn: azo speelnde voetbol, en e dei an [[atletiek|atletik]]. In de cross komt 'n zelfs kampioen van Belgie by de pupilln. 
-In 1989 krygt Vandenbroucke e licensje by de nieuweliengn. Van nu of start zyn koerscarrière. 
+Frank Vandenbroucke groeide op in [[Ploegsteirt]]. Zyn voader, Jean-Jacques, wos e tydege coureur. Frank Vandenbroucke dei e masse sportn geirn: azo speelnde voetbol, en e dei an [[atletiek|atletik]]. In de cross komt 'n zelfs kampioen van Belgie by de pupilln. 
+In 1989 krygt Vandenbroucke e licensje by de nieuweliengn. Van nu of start zyn koerscarrière.
 
 == Succesjoarn ==
 In 1991, en is ton nog moa 17, is Vandenbroucke ol kampioen van Belgie by de nieuweliengn. E wos zo goed dat 'n ier en doar e joar van zyn reekse oversloeg. In 1993 kwam Vandenbroucke prof by Lotto, woa da zyn nounkel Jean-Luc sportdirecteur wos. E têeknde e contract van 2 joar, moar en et dat ni uutedoan. D'r kwam e proces van, moar uutendelik koste Vandenbroucke toch vroeger overstappn na Mapei-GB. E ploeg woa da 'n de medische en professionele begeleiding krêeg da 'n zo geirn wilde. Olleman zei da VDB de grotste belofte van Belgie wos. In 1995 wint VDB Parys-Brussel, zyn êestn grôotn koers by de profs.
