--- a/Frank_Vandenbroucke_(coureur).mw
+++ b/Frank_Vandenbroucke_(coureur).mw
@@ -40,7 +40,7 @@ Op 7 juni 2007 rochte bekend da Vandenbroucke, de dag dervôorn, e zelfmôordpog
 
 ==Grotste overwinniengn==
 '''1994''' (2 overwinniengn)
-* 6e etappe van de Rounde van de Middellansche Zêe
+* 6e etappe van de [[Rounde van de Middellansche Zêe]]
 '''1995''' (7 overwinniengn)
 * Parys-Brussel
 * 1ste etappe van de Rounde va Luxemburg
