*Empty MediaWiki Message*

--- a/Rounde_van_de_Middellansche_Zêe.mw
+++ b/Rounde_van_de_Middellansche_Zêe.mw
@@ -1,4 +1,4 @@
-De '''Rounde van de Middellansche Zêe''' (''Tour Méditerranéen'') is e [[vélokoers|koers]] in [[Vrankryk]] over mêer doagn in 't vôorjoar. 
+De '''Rounde van de Middellansche Zêe''' (''Tour Méditerranéen'') is e [[vélokoerse|koers]] in [[Vrankryk]] over mêer doagn in 't vôorjoar. 
 
 'n Koers bestoat ol sedert 1974 en is idder joar verreedn in februoari. 't Is êen van d'êeste belangryke etappekoersen van 't sezoen. De beslissing volt dikkers op de Mont Faron, e klem van 5,5 km in 't geburte van Toulon (9% gemiddeld, zwoarste stik: 11,4%).
 
