--- a/Rounde_van_de_Middellansche_Zêe.mw
+++ b/Rounde_van_de_Middellansche_Zêe.mw
@@ -44,6 +44,8 @@ Vier [[Belgie|Belgen]] en ol kunn winn, moa nog gin êen [[West-Vloandern|West-V
 == Externe koppelienge==
 * [http://www.letourmediterraneen.net Officieeln website (Frans)]
 
+[[Categorie:Fransche wielerkoers]]
+
 [[de:Mittelmeer-Rundfahrt]]
 [[en:Tour Méditerranéen]]
 [[fi:Välimeren ajo]]
