*Empty MediaWiki Message*

--- a/Nieuwpôort.mw
+++ b/Nieuwpôort.mw
@@ -34,7 +34,7 @@
 |datum4=01/01/2006
 |}}
 
-'''Nieuwpôort''' (officieel [[Nederlands]]: ''Nieuwpoort'') is e stad an de kust. Ze bestoat uut Nieuwpôort-Stad en Nieuwpôort-Bad. D'r weunn bykan 11.000 menschn.
+'''Nieuwpôort''' (officieel [[Nederlands]]: ''Nieuwpoort'') is een stad aan de kust. Ze bestaat uit Nieuwpôort-Stad en Nieuwpôort-Bad. Er wonen ongeveer 11.000 mensen.
 
 In 1600 ein de Spanjoardn en d'Ollanders de [[Slag by Nieuwpoorte]] uutgevochtn.
 
