veranderienge 93567 van [[Special:Contributions/81.244.96.181|81.244.96.181]] were weggedoan

--- a/Nieuwpôort.mw
+++ b/Nieuwpôort.mw
@@ -3,7 +3,7 @@
 |officieel=Nieuwpoort
 |kaart=[[Ofbeeldienge:NieuwpoortLocatie.png|250px]]
 |kaartbijschrift=Liggienge binn 't arroundissement Veurne<br/> in de provinsje West-Vloandern
-|wapen=
+|wapen=Nieuwpoort_wapen.gif
 |vlag= Vlag_Nieuwpoort.gif
 |gewest=VLA
 |provincie=WVLA
@@ -33,12 +33,13 @@
 |datum3=01/07/2005
 |datum4=01/01/2006
 |}}
+[[Ofbeeldienge:Schildpad_Jan_Fabre.jpg|thumb|Bronzn schildpadde van [[Jan Fabre]]]]
 
-'''Nieuwpôort''' (officieel [[Nederlands]]: ''Nieuwpoort'') is een stad aan de kust. Ze bestaat uit Nieuwpôort-Stad en Nieuwpôort-Bad. Er wonen ongeveer 11.000 mensen.
+'''Nieuwpoort''' (officieel [[Nederlands]]: ''Nieuwpoort'') is e stad an de kust. Ze bestoat uut Nieuwpoort-Stad en Nieuwpoort-Bad. D'r weunn bykan 11.000 menschn.
 
 In 1600 ein de Spanjoardn en d'Ollanders de [[Slag by Nieuwpoorte]] uutgevochtn.
 
-==Bezienswoardigheedn==
+==Beziensweirdigheedn==
 *'''Staduus''', were opgebouwd in 1922 in Vlamse renaissance, achter da 't in [['14 - '18]] plat wos geschootn.
 *'''Vismyne'''
 *'''Belfort''': 35 meter oge (stoat op de lyste van Weirelderfgoed van de UNESCO) 
@@ -46,14 +47,11 @@ In 1600 ein de Spanjoardn en d'Ollanders de [[Slag by Nieuwpoorte]] uutgevochtn.
 *'''[[Beaufort 2006]]''' eit de reuzegrote ''Bronzn Schildpadde'' van kunstenoare [[Jan Fabre]] noa Nieuwpoorte gebrocht
 *'''Jan Turpin''', de reuze. 11,4m oge en 700 kilo zwoar. De grotste gedregen [[reuze]] van Europa.
 
-{| border="0"
-|[[Ofbeeldienge:Nieuwpoort - Beach and pier.jpg|thumb|Strand en pier van Nieuwpoort, gezien vanof de Zeebermduinen in Oostduunkerke]]
-|[[Ofbeeldienge:Nieuwpoorte_Strand.jpg|thumb|Sfeerbeeld]]
-|[[Ofbeeldienge:Schildpad_Jan_Fabre.jpg|thumb|Bronzn schildpadde van [[Jan Fabre]]]]
-|}
+[[Ofbeeldienge:Nieuwpoort - Beach and pier.jpg|thumb|left|Strange en piere van Nieuwpoort, gezien vanof de Zeebermdunen in Oostduunkerke]]
+[[Ofbeeldienge:Nieuwpoorte_Strand.jpg|thumb|left|Sfeerbeeld]]
 
 ==Dorptjes==
-'t Oude centrum van Nieuwpoorte ligt e grôte drie kilometer van de zêe. Teegn de zêe is 't er e twidde nieuw toeristisch centrum ountstoan. De bebouwienge langstn de visseraovn d'Albert I loane verbiendt de twee stikkn. Buutn Nieuwpoort-centrum zelve, liggn der nog twee kleine [[de Polders|polder]]dorptjes in de gemêente, noamelik [[Sint-Joris Nieuwpôort)|Sint-Joris]] en [[Ramskapelle (Nieuwpôort)|Ramskapelle]].
+'t Oud centrum van Nieuwpoort ligt e grôte drie kilometer van de zêe. Teegn de zêe is 't er e twidde nieuw toeristisch centrum ountstoan. De bebouwienge langstn de visseraovn d'Albert I loane verbiendt de twee stikkn. Buutn Nieuwpoort-centrum zelve, liggn der nog twee kleine [[de Polders|polder]]dorptjes in de gemêente, noamelik [[Sint-Joris Nieuwpôort)|Sint-Joris]] en [[Ramskapelle (Nieuwpôort)|Ramskapelle]].
 
 {| border="0" style="border: 1px solid #999; background-color:#FFFFFF"
 |- align="center" bgcolor="#CCCCCC"
@@ -66,7 +64,7 @@ In 1600 ein de Spanjoardn en d'Ollanders de [[Slag by Nieuwpoorte]] uutgevochtn.
 |III || align="left" | [[Ramskapelle (Nieuwpôort)|Ramskapelle]] || 15,28 || 555
 |- align="right"
 |}
-Nieuwpoorte zelve ligt an de zêe, tusschn de gemêentn [[Koksyde]] en [[Middelkerke]] (tusschn de dêelgemêentes [[Oostduunkerke]] en [[Lombardsyde]] voe precies te zyn). Deur de grote uutgestrektheid va surtout Ramskapelle in 't binneland, grenst de hêle gemeente an e heel deel parochjes en gemêentn:
+Nieuwpoort zelve ligt an de zêe, tusschn de gemêentn [[Koksyde]] en [[Middelkerke]] (tusschn de dêelgemêentes [[Oostduunkerke]] en [[Lombardsyde]] voe precies te zyn). Deur de grote uutgestrektheid va surtout Ramskapelle in 't binneland, grenst de hêle gemeente an e heel deel parochjes en gemêentn:
 {| align="left"
 |-
 |
@@ -92,7 +90,6 @@ Nieuwpoorte zelve ligt an de zêe, tusschn de gemêentn [[Koksyde]] en [[Middelk
 
 == Kerkn in Nieuwpôorte ==
 [[Ofbeeldienge:Sent-Bernarduskerke_Nieuwpoorte.jpg|thumb|right|De Sent-Bernarduskerke]]
-
 ;Onze-Lieve-Vrouwekerke
 :Parochiekerke van Nieuwpôorte O.-L.-Vrouwe. Oorsprounkelikke kapelle dateert van [[1165]]. De kerke eit volledig vernield gewist binst den [[Êestn Weireldoorloge]]. Ze wos erupgebouwd tusschn [[1920]] en [[1923]]. De kerke eit nen [[beioard]], crypte en schatkoamer.
 
