--- a/Zeeki.mw
+++ b/Zeeki.mw
@@ -5,7 +5,7 @@
 DJ Tom, The Ancient Ones, Steak N°8, After Midnight, Black Chili, Het Zesde Metaal, [[Yevgueni]], Wouter Deprez, Pol en Freddie, Gratis Vat, DJ Bram Vandendriessche.
 
 == 2008 ==
-[[Absynthe Minded]], Yevgueni, Lenny naakt (van Lenny en de Wespen), Denis Nowé, D76, De Loze beloftes, De Vliegende spetter, Adidge, Rebels Rocks, Zexy Superglue, Riskontoe, Dj Smetje en Dj Ice, het Bollaertkoor
+[[Absynthe Minded]], Yevgueni, Lenny naakt (van Lenny en de Wespen), Denis Nowé, D76, De Loze beloftes, De Vliegende spetter, Adidge, Rebels Rocks, Zexy Superglue, Riskontoe, Dj Smetje en Dj Ice, Zoomaar en het Bollaertkoor
 
 == Externe koppeliengn ==
 * [http://www.zeeki.be Den officieeln site]
