*Empty MediaWiki Message*

--- a/Frank_Vandenbroucke_(coureur).mw
+++ b/Frank_Vandenbroucke_(coureur).mw
@@ -9,19 +9,29 @@
   gewicht                     = 68 |
   ploeg                       = Mitsubishi-Jartazi |
   joarn                       = 
-[[2006]]-[[2007]]<br> |
+2006-2007<br> 
+2006<br> 
+2004-2005<br> 
+2004<br> 
+2003<br> 
+2002<br> 
+2001<br>
+1999-2000<br>
+1998<br>
+1995-1997<br>
+1994<br>|
   vorigeploegen               = 
 Acqua & Sapone<br>
 Unibet.com<br>
-MrBookmaker.com<br>
+MrBookmaker.com-SportsTech<br>
 Fassa Bortolo<br>
-Quick·Step - Davitamon<br>
-Domo - Farm Frites<br>
-Lampre - Daikin<br>
+Quick·Step-Davitamon<br>
+Domo-Farm Frites<br>
+Lampre-Daikin<br>
 Cofidis<br>
-Mapei - Bricobi<br>
-Mapei - GB<br>
-Lotto - Caloi |
+Mapei-Bricobi<br>
+Mapei-GB<br>
+Lotto-Caloi |
   specialisoatie              = rouleur en klimmer; nôordelikke klassiekers, klindere roundes |
 }}
 '''Frank Vandenbroucke''' ([[Moeskroen]], [[6 november]] [[1974]]) is e [[België|Belgschen]] [[coureur]]. E wos e grôte belofte die ol in 1999 op zyn oogtepunt wos. Doarachter kwam 'n surtout op e kwoalikke maniere in 't nieuws.
@@ -83,8 +93,6 @@ Op 7 juni 2007 rochte bekend da Vandenbroucke, de dag dervôorn, e zelfmôordpog
 * 2004 Fassa Bortolo
 * 2004-2005 MrBookmaker.com-SportsTech
 * 2006 Unibet.com  
-* 2006-2007 Aqua a Sapone
-* 2008 Mitsubishi-Jartazi
 
 == Boekn ==
 ''Ik ben god niet'' (2008), ottobiografie, Borgerhoff & Lamberigts, ISBN: 978-9077941300
