--- a/Frank_Vandenbroucke_(coureur).mw
+++ b/Frank_Vandenbroucke_(coureur).mw
@@ -48,7 +48,7 @@ In 1999 goat 'n over na Cofidis. E wint in 't begun van 't sezoen 'n Omloop Het 
 Toet 1999, zyn absoluut topjoar, at 'n 't êne succes achter 't ander, mo in dazeste joar wost 'n verdacht van dopinggebruuk. 't Feit dat 'n e goe reloasje adde mi Bernard Sainz, e dokteur die op een 'ongeweune' maniere sporters begeleidt, dei zyn zoake ouk gin goed. Sedertien ging 't bergof mi VDB; e kwam zelfs depressief. E krêeg nog e sportivve eroplevieng in 2002 (twiddn in de Rounde van Vloandern), moa doarachter kwamn d'r ni vele topprestoasjes ne mi.
 Op 7 juni 2007 rochte bekend da Vandenbroucke, de dag dervôorn, e zelfmôordpogieng oundernoomn adde. Doarachter begoste VDB an ze zoveelsn comeback. Anno 2008 rydt 'n nog ossan, moa e stapt mêer of, of dat 'n koersn uutrydt. In 2008 rêed 'n tout 17 april 2008 vo Mitsubishi-Jartazi, moar op dien dag makte de ploeg bekend da ze (vôorlopig) uut makoar giengn. 
 
-==Grotste overwinniengn==
+==Grotste overwinniengn (profs)==
 '''1994''' (2 overwinniengn)
 * 6e etappe van de [[Rounde van de Middellansche Zêe]]
 '''1995''' (7 overwinniengn)
