--- a/Club_Brugge_KV.mw
+++ b/Club_Brugge_KV.mw
@@ -179,6 +179,8 @@ De vôorbereidienge start traditioneel mè oefnmatchkes teegn ploegn uut loager 
 | 30 || style="text-align:left;" | '''Club Brugge''' - Cercle Brugge || 1 - 0 || 60 || 3
 |-
 | 31 || style="text-align:left;" | AA Gent - Club Brugge || 0 - 0 || 61 || 3
+|-
+| 30 || style="text-align:left;" | '''Club Brugge''' - KSV Roeselare || 1 - 0 || 64 || 3
 |}
 
 ===Uutslaagn beker===
