*Empty MediaWiki Message*

--- a/Paolo_Bettini.mw
+++ b/Paolo_Bettini.mw
@@ -5,7 +5,7 @@ Zyn grotste succesn et 'n gekend in êendagskoersn. In 't begun stound 'n in de 
 
 Sedert zyn deurbroake was zyn reloasje me Bartoli verslichterd. Achter da Bartoli weggink uut Mapei in 2002, kwam Bettini kopman. Dazelste joar et 'n voor den twidde kêe Luik-Bastenaken-Luik gewonn. Je was ôok den bestn in de Weireldbeker.
 
-Zyn beste sizoen was zekerst 2003. J'et toun [[Milaan-San Remo]], de HEW Cyclassics en de Clasica San Sebastian gewonn. Ondertussn wast 'n ôok kampioen van Itoalië gekomn. Ounder andere deur die zeges at 'n veel UCI-puntn en was 't ie voor den twidde kêe den bestn in de Weireldbeker.
+Zyn beste sizoen was zekerst 2003. J'et toun [[Milaan-San Remo]], de [[Rounde van de Middellansche Zêe]], de HEW Cyclassics en de Clasica San Sebastian gewonn. Ondertussn wast 'n ôok kampioen van Itoalië gekomn. Ounder andere deur die zeges at 'n veel UCI-puntn en was 't ie voor den twidde kêe den bestn in de Weireldbeker.
 
 In 2004 stound hêel zyn sizoen in 't têekn van de wegrit ip de Olympische Spelen in Athene. Dedé et 'n ton ôok gewounn deur in de sprint de Portugees [[Sérgio Paulinho]] te kloppn. Neffest dadde et 'n voor den derde kêe ip reke de Weireldbeker gewonn.
 
