/* Palmares (een dêeltje d'rvan) */

--- a/Eddy_Merckx.mw
+++ b/Eddy_Merckx.mw
@@ -22,6 +22,7 @@
 * 3x Paris-Nice (1969-71)
 * 12 jaar weirelduurrecord (49,431 km, 1972-84)
 * 1x Critérium du Dauphiné Libéré (1971)
+* 1x [[Rounde van de Middellansche Zêe]] (1973)
 
 32 klassiekers, woarounder:
 * 7x Milaan-San Remo (1966-67, 1969, 1971-72, 1975-76)
