/* Achter de koers */

--- a/Eddy_Merckx.mw
+++ b/Eddy_Merckx.mw
@@ -42,7 +42,7 @@
 * 3x Weireld Sportman van 't Joar - (1969, 1971, 1974)
 
 ==Achter de koers==
-Achter dat 'n estopt wos me koersn, isn begunn mi koersevilloos moakn in ze fabrieke in Sint-Brixius-Rode, e parochie binn Meise. 'n Dag va vadoage rydt va profploegn ollêne nog Chocolade Jacques mi zyn villoos. Vroegerder e Lotto der oek nog mei ereen.
+Achter dat 'n estopt wos me koersn, isn begunn mi koersevilloos moakn in ze fabrieke in Sint-Brixius-Rode, e parochie binn Meise. 'n Dag va vadoage rydt va profploegn ollêne nog Topsport Vlaanderen mi zyn villoos. Vroegerder e Lotto der oek nog mei ereen.
 
 == Externe koppelienge ==
 * [http://www.eddymerckx.be Ze website ]
