*Empty MediaWiki Message*

--- a/Burg_(Brugge).mw
+++ b/Burg_(Brugge).mw
@@ -2,9 +2,9 @@
 De '''Burg''' is ‘t pling woa dat de geschiedenisse van [[Brugge]] begost is. De riviere de Reie strôomde deur Brugge en is nu hêlegans gekanaliseerd.
 
 ==Geschiedenisse==
-[[843]] was ’n importent joar vor Europa. Deur ‘t [[Verdrag van Verdun]] wierd ’t Ryk van [[Karel den Grôotn]] verdêeld ounder z’n drie klêenkinders. [[Karel den Kletsn]] krêeg  [[West-Francië]] (à peu près [[Frankryk]] en [[Vloandern]]).
+[[843]] was ’n importent joar vor Europa. Deur ‘t [[Verdrag van Verdun]] wierd ’t Ryk van [[Karel den Grôotn]] verdêeld ounder z’n drie klêenkinders. [[Karel den Kletsn]] krêeg  [[West-Francië]] ([[Frankryk]] en de [[Vloanderngouwe]]).
 
-Je zound [[Boudewyn I van Vloandern|Boudewyn met den Yzern Oarm]] noa de Vloanderngouwe (Latyn: Pagus Flandrensis), de streke round [[Toeroet|Tourout]], [[Gistel]], [[Oudenburg]] en [[Brugge]], omdat er doa vele geplunderd wierd deur de [[Vikings]].
+Je zound [[Boudewyn I van Vloandern|Boudewyn met den Yzern Oarm]] noa de Vloanderngouwe (Latyn: Pagus Flandrensis), de streke round Brugge en de kust tusschn den [[Yzer]] en ‘t [[Zwin]] met de stadjes [[Toeroet|Tourout]], [[Gistel]] en [[Oudnburg]], omdat er doa vele geplunderd wierd deur de [[Vikings]].
 
 Uut de Vloanderngouwe groeide ‘t [[Groafschap Vloandern]], woavan da Boudewyn I den eestn groaf was.
 
