*Empty MediaWiki Message*

--- a/Vloanderngouwe.mw
+++ b/Vloanderngouwe.mw
@@ -1,4 +1,4 @@
-De '''Vloanderngouwe''' (Latyn: Pagus Flandrensis), was e sôorte provincie, mo klinder,  ounder de [[Frankn]]. ’t Was de streke round Brugge en de kust tusschn den [[Yzer]] en ‘t [[Zwin]] met de stadjes [[Toeroet|Tourout]], [[Gistel]] en [[Oudnburg]]. 
+De '''Vloanderngouwe''' (Latyn: Pagus Flandrensis), was e sôorte provincie, mo klinder,  ounder de [[Frankn]]. ’t Was de streke round [[Brugge]] en de [[Vlamsche Kust|kust]] tusschn den [[Yzer]] en ‘t [[Zwin]] met de stadjes [[Toeroet|Tourout]], [[Gistel]] en [[Oudnburg]]. 
 
 Round 650 kwoamn d’r Iersche missionoarissn preekn in ‘t ''municipium Flandrense'' en in de levensbeschryvienge van Sint-Eligius, de ''Vita sancti Eligii'' (ca.590-660), wast er vo d’n eeste ki sproake van de Vloanderngouwe. 
 
