/* Boudewyn I met den Yzern oarm */

--- a/Frankisch_Ryk.mw
+++ b/Frankisch_Ryk.mw
@@ -39,7 +39,7 @@ In 843, by ‘t [[Verdrag van Verdun]] wierd ’t Ryk were verdeeld ounder drie 
 ==Boudewyn I met den Yzern oarm==
 Uut de Frankischn tyd dateert d’indelienge in ''pagi'' of  ''gouwn''. Ze woarn veel klinder of  uze provincies van nu. Sommigte noamn bestoan nu nog, lik Haspngouw (Pagus Hasbaniensis) en Henegouw (Pagus Hainoensis).
 
-In de 9e eeuwe, ounder Karel den Kletsn, besteurde [[Boudewyn I van Vloandern]] de Vloanderngouwe (Latyn: Pagus Flandrensis), de streke round [[Toeroet|Tourout]], [[Gistel]], [[Oudenburg]] en [[Brugge]]. Je was den eestn gouwgroaf en uut de Vloanderngouwe groeide ‘t [[Groafschap Vloandern]]. 
+In de 9e eeuwe, ounder Karel den Kletsn, besteurde [[Boudewyn I van Vloandern]] de [[Vloanderngouwe]] (Latyn: Pagus Flandrensis), de streke round [[Toeroet|Tourout]], [[Gistel]], [[Oudenburg]] en [[Brugge]]. Je was den eestn gouwgroaf en uut de Vloanderngouwe groeide ‘t [[Groafschap Vloandern]]. 
 
 De Deensche [[Vikings]] plunderdn ol e hêeln tyd uze gebiedn. Ze droungn met under snekkn mè drakarkoppn zô verre meugelik ’t land binn.
 In dien tyd kostn ze met under bootn langs de zeeoarm ’t [[Zwin]] en de riviere de Reie tout in Brugge voarn. Ze noemdn die platse ''Bryghia'' wat dat Oudnoors is vo ‘anlegplatse’. Vo de Vikings teegn t'oudn liet Boudewyn een versterktn burcht bouwn ip de plekke woa da nu de [[Burg (Brugge)|Burg]] is.  
