*Empty MediaWiki Message*

--- a/Brugse_Vrye.mw
+++ b/Brugse_Vrye.mw
@@ -10,7 +10,7 @@ De kasselry wier bestierd deur één [[hoogbaljuw]], vier [[burgemeesters]] en m
 
 't Vrye als bestierlike indelinge is ofgeschaft deur de Fransen tenden de jaren 1700.
 
-'t Was ontstaan rond het jaar duust uut gedeelten van de [[pagus Flandrensis]] (lank, smal gebied tussen 't [[Zwin]] en den [[Yzer]]), de [[pagus Rodanensis]] (de streke round Aardenburg), en de [[pagus Mempiscus]] (de streke te westen van de [[Leie]]). D'oofdplatse van 't Vrye was van by 't begun de Burg in Brugge. 
+'t Was ontstaan rond het jaar duust uut gedeelten van de [[Vloanderngouwe|pagus Flandrensis]] (lank, smal gebied tussen 't [[Zwin]] en den [[Yzer]]), de [[pagus Rodanensis]] (de streke round Aardenburg), en de [[pagus Mempiscus]] (de streke te westen van de [[Leie]]). D'oofdplatse van 't Vrye was van by 't begun de Burg in Brugge. 
 
 ==Bronne==
 PREVENIER, W., en AUGUSTYN, B. (eds.), "De gewestelijke en lokale overheidsinstellingen in Vlaanderen tot 1795", uutgegeven deur 't Algemeen Rijksarchief, 1997.
