The file [[:Image:Spiere-HelkijnLocation.png]] has been replaced by [[:Image:LocSpiere-Helkijn.png]] by administrator [[:commons:User:Siebrand]]: ''Was in category "Duplicate", exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Spiere-Elkyng.mw
+++ b/Spiere-Elkyng.mw
@@ -1,7 +1,7 @@
 {{infobox Belgische gemêente|
 |naam=Gemêente Spiere-Elking
 |officieel=Spiere-Helkijn
-|kaart=[[Ofbeeldienge:Spiere-HelkijnLocation.png|250px]]
+|kaart=[[Ofbeeldienge:LocSpiere-Helkijn.png|250px]]
 |kaartbijschrift=Liggienge binn 't arroundissement Kortryk<br/> in de provincie West-Vloandern
 |wapen= 
 |vlag= 
