The file [[:Image:Spiere-HelkijnLocation.png]] has been replaced by [[:Image:LocSpiere-Helkijn.png]] by administrator [[:commons:User:Siebrand]]: ''Was in category "Duplicate", exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Gemêenteroadsverkiezingn_2006%2FArroundissement_Kortryk.mw
+++ b/Gemêenteroadsverkiezingn_2006%2FArroundissement_Kortryk.mw
@@ -67,7 +67,7 @@ De verkiezingsutsloagn van de [[gemêenteroadsverkiezingn 2006|gemêenteroadsver
 |zetels=12<br>7<br>6<br>4<br>2<br>0
 }}
 
-[[Ofbeeldienge:Spiere-HelkijnLocation.png|left|150px]]
+[[Ofbeeldienge:LocSpiere-Helkijn.png|left|150px]]
 {{Gemêenteroadsverkiezingn|
 |Gemêente=[[Spiere-Elking]]
 |partieen=LB<br>ACCENT
