*Empty MediaWiki Message*

--- a/Inghelram.mw
+++ b/Inghelram.mw
@@ -1,4 +1,4 @@
-'''Inghelram''', '''Engelram''' of '''Enguerrand''' († ca.[[824]]) wos [[forestier]] (busmêester) van de Vlamsche gouw (Pagus Flandrensis) en groaf van [[Oarelbeke]]. Je wos de zeune van [[Lyderic]]. 
+'''Inghelram''', '''Engelram''' of '''Enguerrand''' († ca.[[824]]) wos [[forestier]] (busmêester) van de [[Vloanderngouwe]] (Pagus Flandrensis) en groaf van [[Oarelbeke]]. Je wos de zeune van [[Lyderic]]. 
 
 Achter z’n dôod ist ’n ipgevolgd deur z’n schôonzeune [[Audacer]], de voader van  [[Boudewyn I van Vloandern]]. De forestiers van Vloandern liggn dus an de boasis van ‘t loatere [[groafschap Vloandern]].
 
