*Empty MediaWiki Message*

--- a/Audacer.mw
+++ b/Audacer.mw
@@ -1,4 +1,4 @@
-'''Audacer''',  '''Odoacer''' of '''Odakar''' (°ca. [[810]] – † ca. [[864]]) wos [[forestier]] van de Vlamsche gouw (Pagus Flandrensis) en groaf van [[Oarelbeke]] deur te trouwn met de dochter van [[Inghelram]]. Je wos ôok ''honores'' (weireldlike abt) van de Sint-Pietersabdye in [[Gent]]. 
+'''Audacer''',  '''Odoacer''' of '''Odakar''' (°ca. [[810]] – † ca. [[864]]) wos [[forestier]] van de [[Vloanderngouwe]] (Pagus Flandrensis) en groaf van [[Oarelbeke]] deur te trouwn met de dochter van [[Inghelram]]. Je wos ôok ''honores'' (weireldlike abt) van de Sint-Pietersabdye in [[Gent]]. 
 
 Je wos de voader van [[Boudewyn I van Vloandern]]. De forestiers liggn an de boasis van ’t loatere [[groafschap Vloandern]].
 
