*Empty MediaWiki Message*

--- a/Vloanderngouwe.mw
+++ b/Vloanderngouwe.mw
@@ -4,7 +4,7 @@ Round 650 kwoamn d’r Iersche missionoarissn preekn in ‘t ''municipium Flandr
 
 ’t Gebied zou mo loate beweund gewist zyn. Da kwam deur d’oarme moerassige ground en omdat er ossan gevoar was vor overstromiengn. De duunn wierdn geregeld overstrôomd en ’t moerassig land (nu ’t poldergebied) dat ounder ‘t zeepeil lag wierd overspoeld. ’t Wierd e streke van slik en schorrn. 
 
-‘t Gebied buutn d’Ezelpôorte van Brugge wierd de Vloamingoek genoemd. Die platsnoame (ôok de Vloamingstroate, de Vloamingpôorte en de Vloamingdam) verwyst no d’ôorsprounkelikke Vloamiengn, de beweuners van ‘t schorregebied an d’overstrôomde kust. Vloaming en Vlams zyn ofgeleid van ''flâm'', ‘n Ingveoonsche vorm van ’t Germoansche ''flauma'' , da betekent overstromienge, overstrôomd land, slykkland en past dus goed by ’t Vlams kustgebied da tusschn de derde en d’achtste eeuwe twi kis per dag overstrôomde deur de [[Nôordzêe]]. 
+‘t Gebied buutn d'[[Ezelpôorte]] van Brugge wierd de Vloamingoek genoemd. Die platsnoame (ôok de Vloamingstroate, de Vloamingpôorte en de Vloamingdam) verwyst no d’ôorsprounkelikke Vloamiengn, de beweuners van ‘t schorregebied an d’overstrôomde kust. Vloaming en Vlams zyn ofgeleid van ''flâm'', ‘n Ingveoonsche vorm van ’t Germoansche ''flauma'' , da betekent overstromienge, overstrôomd land, slykkland en past dus goed by ’t Vlams kustgebied da tusschn de derde en d’achtste eeuwe twi kis per dag overstrôomde deur de [[Nôordzêe]]. 
 
 De droge schorre-ground was ollene mo goed vo [[schoap]]n ip te kweekn.  Deur de wulle is de loatere loaknindustrie in de streke tout bloei gekommn.
 
