/* Palmares (een dêeltje d'rvan) */

--- a/Eddy_Merckx.mw
+++ b/Eddy_Merckx.mw
@@ -19,7 +19,7 @@
 * 34 etappn in de Rounde van Vrankryk (6x in 1969, 8x in 1970, 4x in 1971, 6x in 1972, 8x in 1974, 2x in 1975) 
 * 3x puntenklassement Rounde van Vrankryk (1969, 1971-72)
 * 2x bergklassement Rounde van Vrankryk (1969-70)
-* 3x Paris-Nice (1969-71)
+* 3x Parys-Nice (1969-71)
 * 12 jaar weirelduurrecord (49,431 km, 1972-84)
 * 1x Critérium du Dauphiné Libéré (1971)
 * 1x [[Rounde van de Middellansche Zêe]] (1973)
@@ -29,7 +29,7 @@
 * 2x Omloop 't Volk (1971, 1973)
 * 2x [[Rounde van Vloandern]] (1969, 1975)
 * 3x [[Gent-Wevelgem]] (1967, 1970, 1973)
-* 3x [[Paris-Roubaix]] (1968, 1970, 1973)
+* 3x [[Parys-Roubaix]] (1968, 1970, 1973)
 * 3x [[Woalsje Pyl]] (1967, 1970, 1972)
 * 5x [[Luuk-Bastenoakn-Luuk]] (1969, 1971-73, 1975)
 * 2x Amstel Gold Race (1973, 1975)
@@ -37,7 +37,7 @@
 * 1x Grand Prix des Nations (1973)
 * 1x Parys-Brussel (1973)
 * 2x [[Rounde van Lombardeye]] (1971-72)
-(Bordeaux-Paris en Paris-Tours zyn d'ênigste belangryke êendagskoersen da Merckx ni koste winn).  
+(Bordeaux-Parys en Parys-Tours zyn d'ênigste belangryke êendagskoersn da Merckx ni koste winn).  
 * 17 Zesdoagsches.
 * 3x Weireld Sportman van 't Joar - (1969, 1971, 1974)
 
