--- a/Koksyde.mw
+++ b/Koksyde.mw
@@ -40,7 +40,7 @@ In Koksyde zyn der begroafplekkn van de Morin gevoen. De "Morini" wos e stam die
 
 De name "Cox-hyde" is vo 't êerst vermeld in 1270. Koksyde komt van de benaminge kokkels-yde, è woaterinham woar dat er veel kokkels zaatn. Kokkels: schelpn voe t'eten, hyde-yde: inham van de zêe.
 
-Koksydenoars noemn ze dunn-ezels, da woarn muylezels die gebruykt woaren voe van alles en nog wa om te sleurn, en ook voe 't voak te vervoern an 't strange.
+Koksydenoars noemn ze dunn-ezels, da woarn muulezels die gebruukt woarn voe van alles en nog wa te sleurn en ook voe 't voak te vervoern an 't strange.
 
 ==Deelgemeentn==
 De gemeente Koksyde bestoat uut de deelgemeentn Koksyde, [[Ôostduunkerke]] en [[Wulpn]]. 't Oed centrum van Koksyde lig e kilometer of twee van de zee. An de zee is 't er e nieuw toeristisch centrum, Koksyde-bad, ountstoan. Meer noa 't oostn ligt in de deelgemeente Koksyde nog de parochje Sint-Idesbald, ter plekke beter gekend ounder de noame [[Baaltje]]. 't Centrum van de deelgemeente Ôostduunkerke lig ôok e groatn kilometer va zee, met Ôostduunkerke-Bad an de zee. E groatn vier kilometer noa 't binneland ligt de klene landelike parochje Wulpn.
