--- a/Vloanderngouwe.mw
+++ b/Vloanderngouwe.mw
@@ -2,7 +2,7 @@ De '''Vloanderngouwe''' (Latyn: Pagus Flandrensis), was e sôorte provincie, mo 
 
 Round 650 kwoamn d’r Iersche missionoarissn preekn in ‘t ''municipium Flandrense'' en in de levensbeschryvienge van Sint-Eligius, de ''Vita sancti Eligii'' (ca.590-660), wast er vo d’n eeste ki sproake van de Vloanderngouwe. 
 
-’t Gebied zou mo loate beweund gewist zyn. Da kwam deur d’oarme moerassige ground en omdat er ossan gevoar was vor overstromiengn. De duunn wierdn geregeld overstrôomd en ’t moerassig land (nu ’t poldergebied) dat ounder ‘t zeepeil lag wierd overspoeld. ’t Wierd e streke van slik en schorrn. 
+’t Gebied zou mo loate beweund gewist zyn. Da kwam deur d’oarme moerassige ground en omdat er ossan gevoar was vor overstromiengn. De [[dune|duunn]] wierdn deur de [[Duunkerke II]] transgressies geregeld overstrôomd en ’t moerassig land (nu ’t [[polders|poldergebied]]) dat ounder ‘t zeepeil lag, wierd overspoeld. ’t Wierd e streke van slik en schorrn. 
 
 ‘t Gebied buutn d'[[Ezelpôorte]] van Brugge wierd de Vloamingoek genoemd. Die platsnoame (ôok de Vloamingstroate, de Vloamingpôorte en de Vloamingdam) verwyst no d’ôorsprounkelikke Vloamiengn, de beweuners van ‘t schorregebied an d’overstrôomde kust. Vloaming en Vlams zyn ofgeleid van ''flâm'', ‘n Ingveoonsche vorm van ’t Germoansche ''flauma'' , da betekent overstromienge, overstrôomd land, slykkland en past dus goed by ’t Vlams kustgebied da tusschn de derde en d’achtste eeuwe twi kis per dag overstrôomde deur de [[Nôordzêe]]. 
 
