--- a/Leif_Hoste.mw
+++ b/Leif_Hoste.mw
@@ -1,8 +1,32 @@
-{{wrapper}}
-|[[Ofbeeldienge:Leifhoste.JPG|thumb|right|Hoste (twiddn van lienks) op 't Dernycriterium in [[Antwerpn]] (08/08/2007) ]]
-|}
+{{Coureur |
+  zendje                      = [[Ofbeeldienge:Leifhoste.JPG|thumb|right|Hoste (twiddn van lienks) op 't Dernycriterium in [[Antwerpn]] (08/08/2007) ]] |
+  noame                       = Leif Hoste |
+  bynoame                     = |
+  gebortedoatum               = [[17 juli]] [[1977]] |
+  gebortestee                 = [[Kortryk]] |
+  geborteland                 = [[Belgie]] |
+  lengte                      = 183 |
+  gewicht                     = 68 |
+  ploeg                       = Silence-Lotto |
+  joarn                       = 
+2007<br> 
+2005-2006<br> 
+2003-2004<br> 
+2001-2002<br>
+1999-2000<br> 
+1998<br> 
+1997<br>|
+  vorigeploegen               = 
+Predictor-Lotto<br>
+Discovery Channel Pro Cycling Team<br>
+Lotto-Domo<br>
+Domo-Farm Frites<br>
+Mapei-Quick·Step<br>
+Vlaanderen 2002-Eddy Merckx<br>
+Mapei-GB<br> |
+  specialisoatie              = tydryen en nôordelikke klassiekers |
+}}
 {{plat|Kortryks}}
-
 '''Leif Hoste''' ([[Kortryk]], [[17 juli]] [[1977]]) is nen [[België|Belgischen]] [[coureur]] die nu in [[Maldegem]] weunt, moar ipgegroeid is in [[Boaviekove]]. 
 
 Hoste is surtout gekend lik e goein tydrydr (en is ol Belgisch kampioen, by de profs en by de jeugd), moar ie kan ôok goe mee in de mêeste vôorjoarsklassiekers. Ie es by d'echte toppers gereeknd sedert zyn twêedde plekke in de [[Rounde van Vloandern]] va 2004 (achter 'n [[Duutsland|Duuts]] [[Steffen Wesemann]]). 
