beter fotootje (uut de Wiki Commons)

--- a/Leif_Hoste.mw
+++ b/Leif_Hoste.mw
@@ -1,5 +1,5 @@
 {{Coureur |
-  zendje                      = [[Ofbeeldienge:Leifhoste.JPG|thumb|right|Hoste (twiddn van lienks) op 't Dernycriterium in [[Antwerpn]] (08/08/2007) ]] |
+  zendje                      = [[Ofbeeldienge::Leif Hoste 28-07-2007 12-57-53.jpg|thumb|right|Leif Hoste]] |
   noame                       = Leif Hoste |
   bynoame                     = |
   gebortedoatum               = [[17 juli]] [[1977]] |
