--- a/Leif_Hoste.mw
+++ b/Leif_Hoste.mw
@@ -23,7 +23,7 @@ Lotto-Domo<br>
 Domo-Farm Frites<br>
 Mapei-Quick·Step<br>
 Vlaanderen 2002-Eddy Merckx<br>
-Mapei-GB<br> |
+Mapei-GB (stagiair)<br> |
   specialisoatie              = tydryen en nôordelikke klassiekers |
 }}
 {{plat|Kortryks}}
@@ -31,14 +31,6 @@ Mapei-GB<br> |
 
 Hoste is surtout gekend lik e goein tydrydr (en is ol Belgisch kampioen, by de profs en by de jeugd), moar ie kan ôok goe mee in de mêeste vôorjoarsklassiekers. Ie es by d'echte toppers gereeknd sedert zyn twêedde plekke in de [[Rounde van Vloandern]] va 2004 (achter 'n [[Duutsland|Duuts]] [[Steffen Wesemann]]). 
 Ie koste ip de sympathie van hêel Vloandern rekenn toen dat ie in 2007 vo den derde kêe twêdde wos in de Rounde, achter Ballan.
-
-==Profploegn==
-*Vloandern 2002-[[Eddy Merckx]] (1998)
-*Mapei-Quick Step (1999-2000)
-*Domo-Farm Frites (2001-2002)
-*Lotto-Domo (2003-2004)
-*Discovery Channel (2005-2006)
-*Predictor-Lotto (2007-...)
 
 ==Palmares==
 Echte grôte overwinniengn et Hoste nog nie goald, moar en is olglik ol ne kêe Belgisch Kampioen tydryn gewist en ie eit ol de [[Driedoagse van De Panne]] gewonn.
