--- a/Duunkerke_transgressies.mw
+++ b/Duunkerke_transgressies.mw
@@ -15,6 +15,8 @@ Tusschn die transgressies kreegn me periodes van regressie.
 ==Achteroalde visie==
 De Duunkerke transgressies zyn anziene lik en achteroalde visie vo de vormienge van de Vlamsche en d'Ollandsche kust uut te leggn. Studies toonn an dat der gin gefaseerde transgressieperiodes zoundn gewist èn moar da de ountwikkelienge geleidelik an gebeurd zou zyn.<ref>{{Aut|Mulder, E. de, Geluk, M.C., Ritsema, I., Westerhoff, W.E., Wong, T.E. (eds)}} (2003): ''De ondergrond van Nederland.'' Geologie van Nederland, 7: 379 pp. HIERIN: pags 211-246, hoofdstuk 4 (Weichselien-Holoceen: p. 312-317, 329-335, 345-352)</ref><ref>{{Aut|Henk Berendsen|Berendsen, H.J.A.}} (2004): ''De vorming van het land, Inleiding in de geologie en de geomorfologie'', Koninklijke Van Gorcum, Assen, 90-232-4075-8, ''9.6 Historische ontwikkeling van het inzicht in de genese van de kustvlakte'', p. 243-247</ref>
 
+Moar da nimt nie weg dan de Duunkerke transgressies nog osan under belang èn, want veel bestoande literateure verwyst der nog noar.
+
 ==Bronn==
 <references />
 
