*Empty MediaWiki Message*

--- a/Vloanderngouwe.mw
+++ b/Vloanderngouwe.mw
@@ -4,9 +4,9 @@ Round 650 kwoamn d’r Iersche missionoarissn preekn in ‘t ''municipium Flandr
 
 ’t Gebied zou mo loate beweund gewist zyn. Da kwam deur d’oarme moerassige ground en omdat er ossan gevoar was vor overstromiengn. De [[dune|duunn]] wierdn deur de [[Duunkerke II]] transgressies geregeld overstrôomd en ’t moerassig land (nu ’t [[polders|poldergebied]]) dat ounder ‘t zeepeil lag, wierd overspoeld. ’t Wierd e streke van slik en schorrn. 
 
-‘t Gebied buutn d'[[Ezelpôorte]] van Brugge wierd de Vloamingoek genoemd. Die platsnoame (ôok de Vloamingstroate, de Vloamingpôorte en de Vloamingdam) verwyst no d’ôorsprounkelikke Vloamiengn, de beweuners van ‘t schorregebied an d’overstrôomde kust. Vloaming en Vlams zyn ofgeleid van ''flâm'', ‘n Ingveoonsche vorm van ’t Germoansche ''flauma'' , da betekent overstromienge, overstrôomd land, slykkland en past dus goed by ’t Vlams kustgebied da tusschn de derde en d’achtste eeuwe twi kis per dag overstrôomde deur de [[Nôordzêe]]. 
+‘t Gebied buutn d'[[Ezelpôorte]] van Brugge wierd de Vloamingoek genoemd. Die platsnoame (ôok de Vloamingstroate, de Vloamingpôorte en de Vloamingdam) verwyst no d’ôorsprounkelikke Vloamiengn, de beweuners van ‘t schorregebied an d’overstrôomde kust. Vloaming en Vlams zyn ofgeleid van ''flâm'', ‘n Ingveoonsche vorm van ’t Germoansche ''flauma'', da betekent overstromienge, overstrôomd land, slykland en past dus goed by ’t Vlams kustgebied da tusschn de derde en d’achtste eeuwe twi kis per dag overstrôomde deur de [[Nôordzêe]]. 
 
-De droge schorre-ground was ollene mo goed vo [[schoap]]n ip te kweekn.  Deur de wulle is de loatere loaknindustrie in de streke tout bloei gekommn.
+De droge schorreground was ollene mo goed vo [[schoap]]n ip te kweekn.  Deur de wulle is de loatere loaknindustrie in de streke tout bloei gekommn.
 
 Round 800 krêegn de [[Forestier]]s vele te zeggn. [[Karel den Grôotn]] gaf de Vloanderngouwe in lêen an forestier [[Lyderic]], heer van [[Oarelbeke]]. Zyn ipvolgers woarn [[Inghelram]] en [[Audacer]], die de voader was van [[Boudewyn I van Vloandern|Boudewyn met den Yzern Oarm]].
 
