*Empty MediaWiki Message*

--- a/Burg_(Brugge).mw
+++ b/Burg_(Brugge).mw
@@ -24,6 +24,7 @@ De groavn lietn ôok nog e burchtkapelle bouwn, e gevang en e ghiseluus (woa dan
 ==D’Illig-Bloedbasiliek==
 [[Ofbeeldienge:Bruges saint-sang.jpg|thumb|D’Illig-Bloedkapelle]]
 [[Ofbeeldienge:StadhuisBrugge.jpg|thumb|’t Staduus]]
+[[Ofbeeldienge:P5280020.JPG|thumb|Detail van 't staduus en 't verguld beeldouwwerk an d'Oude Griffie]]
 D’[[Illig-Bloedbasiliek]] is ’n dubbelkapelle mè beneen de Romoansche Sint-Basiliuskapelle (1139-1149) en boovn d’Illig Bloedkapelle.
 ’t Is ‘t enigste gebouw dat overgebleevn is van den tyd dat de groafelikkn burcht ip ’t Burgpling stound. ’t Interieur van de dounkere crypte in de beneenkapelle is bewoard gebleevn en ‘t is e schôon vôorbeeld van de [[Romoanschn styl]]. ’t Is ’t oudste gebouw van Brugge. In de boovnkapelle van ’t Illig-Bloed, is ’t romoans karakter verloorn gegoan. In de 15e eeuwe is ’t erbouwd gewist in gotischn styl en in de 19e eeuwe is ‘t neo-gotisch verbouwd gewist. De relikwie van ’t [[Illig Bloed]] wordt doa bewoard en ieder joar meegedroagn in d'[[Illig-Bloedprocessie]]. De noame steeghere, [[Middelnederlands]] vo den trap noa de boovnkapelle uut 1548,  leeft voort deurdat de passage mè winkeltjes noa de wullestroate ''Ten Steeghere'' genoemd is.
 
