koppelienge na Burg (Brugge)

--- a/Boudewyn_I_van_Vloandern.mw
+++ b/Boudewyn_I_van_Vloandern.mw
@@ -27,7 +27,7 @@ Boudewyn en Judith kreegn vier kinders:
 ==Verweeznlikkiengn==
 Styf vele es 't er nie gekend van dienen groaf. Boudewyn wos in olle gevol ne competentn en stoutn militair. J'es bekend gerocht omdat ie d'r in [[864]] lik één van d'eeste in sloagde de rooftochtn van de [[Viking]]s in Vloandern te doen stoppn. 't Es van ton dat'n em zyn bynoame '''met den Yzern Oarm''' èt gekreegn.
 
-Om de Vikings tegen t'oudn, liet ie ne [[burcht]] bouwn up de plekke woa da de riviere de [[Reie]] in den zeeoarm 't [[Zwin]] uutkomt. Da wos et begun van de Brugsche [[Burg]] - vandoa de noame. 't Es deur dienen burcht dan de Vikings die stee noois nie angevolln èn.
+Om de Vikings tegen t'oudn, liet ie ne [[burcht]] bouwn up de plekke woa da de riviere de [[Reie]] in den zeeoarm 't [[Zwin]] uutkomt. Da wos et begun van de [[Burg (Brugge)|Brugsche Burg]] - vandoa de noame. 't Es deur dienen burcht dan de Vikings die stee noois nie angevolln èn.
 
 Deur zyn kordoat uptreedn koste Boudewyn ol gauwe nen eigen koers voarn en kreeg Vloandern in kortn tyd e toamelik zelfstandige plekke binn 't Frankisch Ryk.
 
