*Empty MediaWiki Message*

--- a/ANZAC_Day.mw
+++ b/ANZAC_Day.mw
@@ -1,4 +1,4 @@
-'''ANZAC Day''' is e vryen dag met e grôte importensje in [[Australië]] en [[Nieuw-Zêeland]]. E volt op 25 april. 
+'''ANZAC Day''' is e vryen dag met e grôte importensje in [[Australië]] en [[Nieuw-Zêeland]]. E volt op [[25 april]]. 
 ANZAC is d'ofkortieng vo Australian and New Zealand Army Corps.
 
 == Geschiedenisse ==
