--- a/Burg_(Brugge).mw
+++ b/Burg_(Brugge).mw
@@ -25,12 +25,13 @@ De groavn lietn ôok nog e burchtkapelle bouwn, e gevang en e ghiseluus (woa dan
 [[Ofbeeldienge:Bruges saint-sang.jpg|thumb|D’Illig-Bloedkapelle]]
 [[Ofbeeldienge:StadhuisBrugge.jpg|thumb|’t Staduus]]
 [[Ofbeeldienge:P5280020.JPG|thumb|Detail van 't staduus en 't verguld beeldouwwerk an d'Oude Griffie]]
+[[Ofbeeldienge:Bruges_De_Burg.JPG|thumb|300px|Links 't Oud Gerechtsof]]
 D’[[Illig-Bloedbasiliek]] is ’n dubbelkapelle mè beneen de Romoansche Sint-Basiliuskapelle (1139-1149) en boovn d’Illig Bloedkapelle.
 ’t Is ‘t enigste gebouw dat overgebleevn is van den tyd dat de groafelikkn burcht ip ’t Burgpling stound. ’t Interieur van de dounkere crypte in de beneenkapelle is bewoard gebleevn en ‘t is e schôon vôorbeeld van de [[Romoanschn styl]]. ’t Is ’t oudste gebouw van Brugge. In de boovnkapelle van ’t Illig-Bloed, is ’t romoans karakter verloorn gegoan. In de 15e eeuwe is ’t erbouwd gewist in gotischn styl en in de 19e eeuwe is ‘t neo-gotisch verbouwd gewist. De relikwie van ’t [[Illig Bloed]] wordt doa bewoard en ieder joar meegedroagn in d'[[Illig-Bloedprocessie]]. De noame steeghere, [[Middelnederlands]] vo den trap noa de boovnkapelle uut 1548,  leeft voort deurdat de passage mè winkeltjes noa de wullestroate ''Ten Steeghere'' genoemd is.
 
 ==’t Staduus==
 Links van de basiliek stoat ’t [[Gotiek|gotisch]] staduus. D’n êestn stêen is geleid in 1376 deur groaf [[Lodewyk van Male]]. ’t Is êen van d’oudste staduuzn van de Nederlandn. In de vôorgevel uut de 14e eeuwe stoan d’r 49 beeldn van figeurn uut d’n bybel en de geschiedenisse van Vloandern. Ip ‘t eeste verdiep ku je de Gotische zoale bezoekn. ‘t Outn anggewelf dateert uut 1402 en de neogotische meurschilderiengn uut d’n tyd van ’t istorisch romantisme, end 19e eeuwe. In d’istorische zoale zyn d’r schilderyen, documentn en zoakn die in verband te bringn zyn met de geschiedenisse van Brugge.
-Neffest ’t staduus, ounder de boge, lopt ’t Blind-Ezelstratje, genoemd noar ’n erberge van in d’n tyd.
+Neffest ’t staduus, ounder de boge, lopt ’t Blind-Ezelstratje, genoemd noar ’n erberge van in d’n tyd, no de reien.
 
 ==D’Oude Griffie==
 D’oude Griffie stoa links van ’t staduus. ‘t [[Renaissance]]gebouw (1534-1537) is gebouwd ip de plekke woa da vroeger ’t groafelik paleis ''de Loove'' stound. De gevel is versierd mè verguld beeldouwwerk mè helegans van  boovn ''Vrouwe Justicia''. In de joarn 1980 was ‘t gebouw nog in gebruuk ols vredegerecht. 
