*Empty MediaWiki Message*

--- a/Nico_Mattan.mw
+++ b/Nico_Mattan.mw
@@ -6,7 +6,7 @@
 
 Mattan wos prof sedert 1994. Ie es gestopt ip 7 oktober 2007, met de Franco-Belge, in de 3de etappe die endigde in [[Poperienge]]. 
 
-Mattan wos in 't begun knecht van ze moat [[Frank Vandenbroucke (coureur)|Frank Vandenbroucke]]. In 1999 moest ie stoppn mè koersn omda zyn erte roar dèj. Moar achter ne moand kost 'n toch vodder koersn.
+Mattan wos in 't begun knecht van ze moat [[Frank Vandenbroucke (coureur)|Frank Vandenbroucke]]. In 1999 moest ie stoppn mè koersn omda zyn erte roar dèj. Moar achter ne moand, en onderzoekn in [[Amerika]], kost 'n toch vodder koersn.
 
 Mattan wos gekend vo ze bygeloof. E speelde ôok geirn de rolle van kluchtigoard in 't pelotong en 't was ôok geweetn dat ie ne levensgenieter wos, die geirn ne ki gink goan eten.
 
