"Polle" omdat ie personages van Paul Jambers imiteert

--- a/Leif_Hoste.mw
+++ b/Leif_Hoste.mw
@@ -1,7 +1,7 @@
 {{Coureur |
   zendje                      = [[Ofbeeldienge:Leif Hoste 28-07-2007 12-57-53.jpg|thumb|right|Leif Hoste]] |
   noame                       = Leif Hoste |
-  bynoame                     = |
+  bynoame                     = Polle |
   gebortedoatum               = [[17 juli]] [[1977]] |
   gebortestee                 = [[Kortryk]] |
   geborteland                 = [[Belgie]] |
