veranderienge 93658 van [[Special:Contributions/80.200.243.245|80.200.243.245]] were weggedoan

--- a/James_Ensor.mw
+++ b/James_Ensor.mw
@@ -2,7 +2,7 @@
 [[Ofbeeldienge:James.Ensor.graf.jpg|thumb|Graf by de duunkerke in Mariakerke]]
 '''James Ensor''' ([[Ostende (stad)|Ostende]], [[13 april]] [[1860]] - [[19 november]] [[1949]]) was e [[kunstschilder]]. 
 
-Ze pa naamt James Frederic Ensor en twas e potter, met andere woordn ne gieng geern no de vintn! James Ensor wos nen expressionist, wuk da wil zeggn dat 'n vele expresje in zyn schilderyen wildige leggn. J'è nen hêle tyd in [[Ostende (stad)|Ostende]] geweund. Eèn van zyn bekenste werkn is de ''Intrede van Christus in Brussel''. J'é ôok wa me maskers, da je ip veel schilderyen tegenkomt.
+James Ensor wos nen expressionist, wuk da wil zeggn dat 'n vele expresje in zyn schilderyen wildige leggn. J'è nen hêle tyd in [[Ostende (stad)|Ostende]] geweund. Eèn van zyn bekenste werkn is de ''Intrede van Christus in Brussel''. J'é ôok wa me maskers, da je ip veel schilderyen tegenkomt.
 
 I ze jounge joaren is 't 'n no 't [[O.L.V.O.|Onze-Lieve-Vrouwe College]] in Ostende gewist, woa da ze zein dat 'n der niks van kost.
 
